--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
@@ -14,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
